# gnucap

./: CMakeLists.txt  Makefile  configure.ac
apps/: CMakeLists.txt
autotools/: bootstrap
cmake/: config.h.in
include/: CMakeLists.txt  md.h  patchlev.h
lib/: CMakeLists.txt  Makefile.am  c_attach.cc
main/: Makefile.am
